[package]
name = "redbin"
version = "0.0.2"
authors = ["Maciej Łoziński <loziniak@o2.pl>"]
license = "MIT OR Apache-2.0"
description = "Serde Redbin format"
#repository = "https://github.com/serde-rs/example-format"
#documentation = "https://serde.rs/data-format.html"
keywords = ["serde", "redbin", "red"]
categories = ["encoding"]
edition = "2018"
#rust-version = "1.31"
publish = false

[dependencies]
serde = "1.0"
serde_bytes = "*"
iconv = "*"
dyn_buf = "*"

[dev-dependencies]
serde_derive = "1.0"
